--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -11,6 +11,7 @@
 %\setmonofont{Courier New}
 \urlstyle{rm}
 \usepackage[font=footnotesize,labelfont=bf]{caption}
+\numberwithin{equation}{section}
 
 % changes package, and a bit more room on the right
 \usepackage{todonotes}
@@ -65,9 +66,9 @@ This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and
 \clearpage
 \input{discrete_gauge_theory_totals}
 \clearpage
-% \appendix
-% \input{discrete_gauge_theory_appendix}
-% \clearpage
+\appendix
+\input{discrete_gauge_theory_appendix}
+\clearpage
 
 \bibliography{connections}
 \end{document}
