--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_intro.tex
@@ -4,21 +4,19 @@ The outline is that we will define
 \begin{itemize}
 \item principal bundles in Section~\ref{sec:torsors},
 \item simplicial complexes, and homotopical realizations of these in Section~\ref{sec:discrete_man},
-\item vector fields in Section~\ref{sec:vector_fields},
+\item tangent bundles and vector fields in Section~\ref{sec:vector_fields},
 \end{itemize}
 and observe emerging from those definitions the presence of
 \begin{itemize}
 \item connections and curvature in Section~\ref{sec:connections},
 \item the index of a vector field in Section~\ref{sec:totals},
 \end{itemize}
-and then define in Section~\ref{sec:totals}
+and then define in Section~\ref{sec:totals}, for a 2-dimensional simplicial complex
 \begin{itemize}
 \item the total curvature, as in the Gauss-Bonnet theorem
-\item the total index of a vector field, as in Poincaré-Hopf theorem,
-\item and prove the equality of these to each other.
+\item the total index of a vector field, as in the Poincaré-Hopf theorem,
+\item and prove the equality of these to each other when the complex is oriented (Theorem~\ref{thm:total_index_total_curvature}).
 \end{itemize}
-
-\todo{state all the assumptions and the main theorem}
 
 We will build up an example of all of these structures on an octahedron model of the sphere, and compute its Euler characteristic of 2. We will not, however, be supplying a separate definition of Euler characteristic so as to truly reproduce the Gauss-Bonnet and Poincaré-Hopf theorems.
 
