--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_vector_fields.tex
@@ -131,18 +131,30 @@ The map \( \pr_1\circ (\alpha, \pr_2)^{-1}:T_i\times T_i\to \Gg(m) \) is called 
 
 \begin{mylemma}
 \label{lem:multpath}
-If \( G \) is a higher group with multiplication \( \mu:G\times G\to G \) and proof of commutativity \( \mathsf{is\_comm}:\pit{a,b:G}\mu(a, b)=\mu(b, a) \) then \( \mu \) induces a function \( \mu_=:(x=_G y)\times (x'=_G y')\to (\mu(x, x')=_G\mu(y,y')) \).
+If \( G \) is a higher group with multiplication \( \mu:G\times G\to G \) and proof of commutativity \( \mathsf{is\underscore comm}:\pit{a,b:G}\mu(a, b)=\mu(b, a) \) then \( \mu \) induces a function \( \mu_=:(x=_G y)\times (x'=_G y')\to (\mu(x, x')=_G\mu(y,y')) \).
 \end{mylemma}
 \begin{myproof}
 If \( p:x=_G y \) and \( p':x'=_G y' \), then we can define \( \mu_=(p, p') \) by concatenating the three paths 
 \begin{align*} 
 \mu(x',p)&:\mu(x', x)=_G\mu(x', y)\\
-\mathsf{is\_comm}(x',y)&:\mu(x',y)=_G\mu(y,x')\\
+\mathsf{is\underscore comm}(x',y)&:\mu(x',y)=_G\mu(y,x')\\
 \mu(y, p')&:\mu(y, x')=_G\mu(y, y').
 \end{align*}
 \end{myproof}
 
-Each fiber \( T_i \) is pointed by \( X_i \), so we can define the map \( T_i\xrightarrow[]{-X_i}\Gg(m) \), and then give a name to the special term \( \rho_{ij}\defeq T_{ij}X_j - X_i \). 
+Each fiber \( T_i \) is pointed by \( X_i \), so we can define the map \( T_i\xrightarrow[]{-X_i}\Gg(m) \), and then give a name to the special term \( \rho_{ij}\defeq T_{ij}X_j - X_i \). It fits into a diagram
+\begin{equation}
+\label{eq:action_of_rho}
+% https://q.uiver.app/#q=WzAsNCxbMCwwLCJUX2kiXSxbMSwwLCJUX2oiXSxbMCwxLCJcXG1hdGhzY3J7R30obSkiXSxbMSwxLCJcXG1hdGhzY3J7R30obSkiXSxbMCwxLCJUX3tqaX0iXSxbMSwzLCIoXFx0ZXh0ey19KS1YX2oiXSxbMCwyLCIoXFx0ZXh0ey19KS1YX2kiLDJdLFsyLDMsIihcXHRleHR7LX0pK1xccmhvX3tqaX0iLDJdXQ==
+\begin{tikzcd}
+  {T_i} & {T_j} \\
+  {\mathscr{G}(m)} & {\mathscr{G}(m)}
+  \arrow["{T_{ji}}", from=1-1, to=1-2]
+  \arrow["{(\text{-})-X_i}"', from=1-1, to=2-1]
+  \arrow["{(\text{-})-X_j}", from=1-2, to=2-2]
+  \arrow["{(\text{-})+\rho_{ji}}"', from=2-1, to=2-2]
+\end{tikzcd}
+\end{equation}
 
 \begin{mylemma} \( \rho_{ij}+\rho_{ji}=_{\Gg(m)}0 \).
 \label{lem:subtraction}\end{mylemma}
@@ -154,9 +166,9 @@ Each fiber \( T_i \) is pointed by \( X_i \), so we can define the map \( T_i\xr
 &=_{T_i} X_i&&\text{by definition of }T
 \end{align*}
 \end{myproof}
-Now we want to make use of the fact that dependent functions such as our vector field send \( \refl_{v_i} \) to \( \refl_{X_i} \) (by path induction, see for example \cite{hottbook} Lemma 2.3.4), but mapped from \( X_i=_{T_i}X_i \) to the non-dependent type \( 0=_{\Gg(m)}0 \).
+We can obtain a path in \( \Gg(m) \) from a dependent path by again subtracing the basepoint, e.g. \( \sigma_{ij}\defeq X_{ij}-X_j:T_{ji}X_i-X_j=_{\Gg(m)}0 \), which type also has the name \( \rho_{ji}=_{\Gg(m)}0 \). Notice the reversal in indices between \( \sigma_{ij} \) and \( \rho_{ji} \), which reflects our opposite conventions for \( X_{ij} \) and \( T_{ji} \).
 
-We can obtain a path in \( \Gg(m) \) from a dependent path by again subtracing the basepoint, e.g. \( \sigma_{ij}\defeq X_{ij}-X_j:0=_{\Gg(m)}T_{ji}X_i-X_j \), which type also has the name \( 0=_{\Gg(m)}\rho_{ji} \). Notice the reversal in indices between \( \sigma_{ij} \) and \( \rho_{ji} \), which reflects our opposite conventions for \( X_{ij} \) and \( T_{ji} \).
+The key technical lemma is the following. Recall that dependent functions such as our vector field \( X \) send \( \refl_{v_i} \) to \( \refl_{X_i} \) (by path induction, see for example \cite{hottbook} Lemma 2.3.4). As stated, this can only be used when we have a path that is \( \refl \), for example when traversing \( e_{ij}\cdot e_{ji} \), i.e. an edge followed by its inverse. We will use subtraction together with the operation of Lemma~\ref{lem:multpath} to lift this requirement, by obtaining two paths in \( \Gg(m) \) that can be added without needing to be concatenated directly.
 
 \begin{mylemma}
 \label{lem:cancellation}
@@ -165,19 +177,24 @@ With the notation \( \sigma_{ij}\defeq X_{ij}-X_j \), and with addition of paths
 \begin{myproof}
 First we need to show that the sum is a loop, then we can prove that it is \( \refl_0 \). The terms have these types:
 \begin{align*}
-\sigma_{ij}&:0=_{\Gg(m)}\rho_{ji}\\
-\sigma_{ji}&:0=_{\Gg(m)}\rho_{ij}
+\sigma_{ij}&:\rho_{ji}=_{\Gg(m)}0\\
+\sigma_{ji}&:\rho_{ij}=_{\Gg(m)}0
 \end{align*}
-so when we add these paths with \( + \) we obtain a path \( \sigma_{ij}+\sigma_{ji}:0=_{\Gg(m)} \rho_{ji}+\rho_{ij} \) which by Lemma~\ref{lem:subtraction} is \( 0=_{\Gg(m)}0 \). We compute \( + \) using the concatenations in Lemma~\ref{lem:multpath}, which gives
+so when we add these paths with \( + \) we obtain a path \( \sigma_{ij}+\sigma_{ji}:\rho_{ji}+\rho_{ij}=_{\Gg(m)} 0 \) which by Lemma~\ref{lem:subtraction} is \( 0=_{\Gg(m)}0 \). We compute \( + \) using the concatenations in Lemma~\ref{lem:multpath}, which gives
 \begin{align*}
-\sigma_{ij}+\sigma_{ji} &: (0+0) \overset{\sigma_{ij}}{=\joinrell=} (0+\rho_{ji}) \overset{\mathsf{is\_comm}}{=\joinrell=}(\rho_{ji}+0) \overset{\rho_{ji}+\sigma_{ji}}{=\joinrell=}(\rho_{ji}+\rho_{ij})\,\,\big[\overset{\mathrm{Lemma~\ref{lem:subtraction}}}{=\joinrell=}0\big]\\
-\sigma_{ij}+\sigma_{ji}&=_{0=_{\Gg(m)}0} (X_{ij}-X_j)\cdot (\rho_{ji} + (X_{ji} - X_i))\\
-&=_{0=_{\Gg(m)}0} (X_{ij}-X_j)\cdot (T_{ji}(X_{ji} - X_i))\\
-&=_{0=_{\Gg(m)}0} \\
-&=_{0=_{\Gg(m)}0} \refl_0
+\sigma_{ij}+\sigma_{ji} &: 
+  (0+0) \overeq{\mathrm{Lemma~}\ref{lem:subtraction}}
+  (\rho_{ji}+\rho_{ij}) \overeq{\sigma_{ij}+\rho_{ij}}
+  (0+\rho_{ij}) &&\overeq{\mathsf{is\underscore comm}}
+  (\rho_{ij}+0) \overeq{\sigma_{ji}}
+  (0+0)\\
+\sigma_{ij}+\sigma_{ji}&=_{0=_{\Gg(m)}0} (\sigma_{ij}+\rho_{ij})\cdot \sigma_{ji}&& \\
+&=_{0=_{\Gg(m)}0} ((X_{ij}-X_j)+\rho_{ij})\cdot (X_{ji} - X_i)&&\text{definition of }\sigma s\\
+&=_{0=_{\Gg(m)}0} (T_{ij}(X_{ij})-X_i)\cdot (X_{ji} - X_i)&&\text{action of }\rho_{ij}\text{ (see (\ref{eq:action_of_rho}))} \\
+&=_{0=_{\Gg(m)}0} \refl_{X_i}-X_i&&\text{path induction for }X\\
+&=_{0=_{\Gg(m)}0} \refl_0&&
 \end{align*}%
 \end{myproof}%
-
 \begin{mynote}
 The classical argument of Hopf \cite{hopf}, which is presented in more detail in the more readily available \cite{needham}, makes an implicit assumption that we can concatenate two terms of different type such as \( X_{ij} \) and \( X_{kl} \). The authors name such terms ``change in angle across an edge.'' The extra work we are doing in this section amounts to a partial formalization of this idea.
 \end{mynote}
