i took an additional critical pass of the first 5 sections

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -35,19 +35,13 @@
 \maketitle
 
 \begin{abstract}
-Type families on higher inductive types such as pushouts can capture the homotopical properties of differential geometric constructions including connections, curvature, gauge transformations, and vector fields. We define a class of combinatorial pushouts, then define principal bundles, connections, and curvature on these. We provide an example of a tangent bundle but do not prove when these must exist. We draw inspiration in part from the young field of discrete differential geometry, and in part from the original classical proofs, which often make use of triangulations and other discrete arguments. We prove an equality relating the Gauss-Bonnet theorem to the Poincaré-Hopf theorem. We also attempt to map out future directions.
+Type families on higher inductive types such as pushouts can capture homotopical properties of differential geometric constructions including connections, curvature, and vector fields. We define a class of pushouts based on simplicial complexes, then define principal bundles, connections, and curvature on these. We provide an example of a tangent bundle but do not prove when these must exist. We define vector fields, and the index of a vector field. Our main result is a theorem relating total curvature and total index, a key step to proving the Gauss-Bonnet theorem and the Poincaré-Hopf theorem, but without an existing definition of Euler characteristic to compare them to. We draw inspiration in part from the young field of discrete differential geometry, and in part from the original classical proofs, which often make use of triangulations and other discrete arguments.
 \end{abstract}
 
 \begin{dedication}
 This thesis is dedicated to John Baez, Sean M. Carroll, Sabine Hossenfelder, and other communicators who are carrying the torch of science forward in the spirit of my hero Carl Sagan. I have followed you all for many years, and you have inspired me to continue my studies alongside my career. Thank you.
-
-\begin{quote} 
-\centering
-``It is always ourselves we work on, whether we realize it or not. There is no other work to be done in the world.'' --- Stephen Talbott, \emph{The Future Does Not Compute}\cite{talbott}
-\end{quote}
 \end{dedication}
 
-\listofchanges[title=Changelist]
 \listoftodos
 \clearpage
 
